14. scrollbar styling fix

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 a {
     color: var(--main2) !important;
@@ -445,5 +446,15 @@ font-size: 1rem !important;
     }
 }
 
-/* Antd globals */
+/* Scrollbar settings */
+
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+    background-color: darkgrey
+}
+::-webkit-scrollbar-track {
+    background-color: white
+}
 
